--- a/BackgroundEasy/MainWindow.xaml
+++ b/BackgroundEasy/MainWindow.xaml
@@ -23,7 +23,7 @@
         mc:Ignorable="d"
         materialDesign:ThemeAssist.Theme="Light"
     
-        Title="{Binding WindowTitle, Mode=OneWay}" Height="516" Width="500"  UseLayoutRounding="True" SnapsToDevicePixels="True" MinWidth="600" d:DataContext="{d:DesignInstance {x:Type ViewModel:MainVM}, IsDesignTimeCreatable=True}" Icon="app.ico" WindowStartupLocation="CenterScreen">
+        Title="{Binding WindowTitle, Mode=OneWay}" Height="610.903" Width="793.5"  UseLayoutRounding="True" SnapsToDevicePixels="True" MinWidth="600" d:DataContext="{d:DesignInstance {x:Type ViewModel:MainVM}, IsDesignTimeCreatable=True}" Icon="app.ico" WindowStartupLocation="CenterScreen">
     <Window.InputBindings>
         <KeyBinding Gesture="ctrl + g"   Command="{Binding GpDevCommand}" >
 
@@ -345,7 +345,7 @@
                         <Image Width="16" Height="16" Source="Media/file_16px_ss.png" />
                     </MenuItem.Icon>
                 </MenuItem>
-                    <!--MenuItem Command="{Binding ExportAllPropertiesExcel}" HeaderStringFormat="Save {0:P} (All)" Header="{Binding  Source={x:Static MiCommon:ApplicationInfo.UIN_PRIMARY},Mode=OneTime}" >
+                <!--MenuItem Command="{Binding ExportAllPropertiesExcel}" HeaderStringFormat="Save {0:P} (All)" Header="{Binding  Source={x:Static MiCommon:ApplicationInfo.UIN_PRIMARY},Mode=OneTime}" >
                     <MenuItem.Icon>
                         <Image Width="16" Height="16" Source="Media/save_16px_ss.png" />
                     </MenuItem.Icon>
@@ -399,7 +399,7 @@
 					Header="_About" />
             </MenuItem>
         </Menu>
-        <Grid x:Name="app_top_pl" Grid.Row="1">
+        <Grid Visibility="Collapsed" x:Name="app_top_pl" Grid.Row="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
@@ -422,7 +422,7 @@
                                 <custom:PackIconFontAwesome Kind="TerminalSolid" Height="16" Width="16"/>
                             </StackPanel>
                         </Button-->
-                        
+
                         <Button Padding="8 8" Style="{DynamicResource MaterialDesignToolButton}"  Command="{Binding AddSkuFromFileCommand}"  Height="40" Margin="0,8" ToolTip="Add Images from a file">
                             <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                                 <custom:PackIconFontAwesome Kind="PlusSolid" Height="16" Width="16"/>
@@ -458,16 +458,16 @@
                     </ToolBar>
 
                     <StackPanel Orientation="Horizontal" Grid.Column="1" HorizontalAlignment="Right">
-                        
+
                     </StackPanel>
                 </Grid>
             </materialDesign:ColorZone>
         </Grid>
         <Grid x:Name="app_b" VerticalAlignment="Stretch" AllowDrop="True" AttachedMi:DropFilesAtachedProperties.DropFilesKey="excel" Background="Transparent" Margin="0,4,0,2" Grid.Row="2">
 
-            
 
-          
+
+
 
             <Grid x:Name="setupScreen" Visibility="{Binding IsSetupScreenVisible,Converter={StaticResource BooleanToVisibilityConverter}}" >
                 <Grid.RowDefinitions>
@@ -482,21 +482,185 @@
                     </Grid.RowDefinitions>
                     <Grid  x:Name="options_content">
                         <StackPanel Grid.IsSharedSizeScope="True">
+                            
+                            <TextBlock Margin="8,8,8,6" Foreground="#FF979797" Text="Background:" Style="{StaticResource MaterialDesignSubtitle2TextBlock}" />
+
+                            <Grid >
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="auto"/>
+                                </Grid.ColumnDefinitions>
+                                <StackPanel>
+                                    <StackPanel Orientation="Horizontal" Height="44">
+                                        <StackPanel.Resources>
+                                            <Style TargetType="RadioButton" x:Key="TabLikeOpacityAndBorderRadioButtonStyle">
+                                                <Setter Property="Cursor" Value="Hand"/>
+                                                <Setter Property="Template">
+                                                    <Setter.Value>
+                                                        <ControlTemplate  TargetType="RadioButton">
+                                                            <materialDesign:ColorZone Opacity="0.6" x:Name="wrapper" HorizontalAlignment="Left" BorderThickness="1"  Margin="8,0" Background="#7FFAFAFA" BorderBrush="#FFCFCFCF" VerticalAlignment="Center">
+                                                                <Border x:Name="innerBorder" Background="White" Padding="8,4" BorderThickness="1" BorderBrush="Transparent">
+                                                                    <ContentPresenter Content="{TemplateBinding Content}" ContentTemplate="{TemplateBinding ContentTemplate}"/>
+
+                                                                </Border>
+                                                            </materialDesign:ColorZone>
+                                                            <ControlTemplate.Triggers>
+                                                                <DataTrigger Binding="{Binding IsChecked,RelativeSource={RelativeSource Self}}" Value="True">
+                                                                    <Setter Property="BorderBrush" TargetName="innerBorder" Value="#FF1A75B5"/>
+                                                                    <Setter Property="BorderBrush" TargetName="wrapper" Value="#FF1A75B5"/>
+                                                                    <Setter Property="Opacity" TargetName="wrapper" Value="1"/>
+                                                                </DataTrigger>
+                                                                <DataTrigger Binding="{Binding IsMouseOver,RelativeSource={RelativeSource Self}}" Value="True">
+                                                                    <Setter Property="Opacity" TargetName="wrapper" Value="0.88"/>
+                                                                </DataTrigger>
+                                                            </ControlTemplate.Triggers>
+                                                        </ControlTemplate>
+
+                                                    </Setter.Value>
+                                                </Setter>
+                                            </Style>
+                                            </StackPanel.Resources>
+                                        <RadioButton GroupName="BgType" Style="{StaticResource TabLikeOpacityAndBorderRadioButtonStyle}" IsChecked="{Binding IsImageTabSelected,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}">
+                                            <Grid >
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="58"/>
+                                                    <ColumnDefinition Width="*"/>
+                                                    <ColumnDefinition Width="48"/>
+                                                </Grid.ColumnDefinitions>
+                                                <Grid>
+                                                    <Border Height="28" Width="28" CornerRadius="8" Background="#2B1A75B5">
+                                                        <custom:PackIconMaterial Kind="Image" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="#FF1A75B5"/>
+                                                    </Border>
+                                                </Grid>
+                                                <StackPanel Grid.Column="1" Margin="8,4,0,4" VerticalAlignment="Center" >
+                                                    <TextBlock  FontSize="16"   Text="Image" TextOptions.TextFormattingMode="Ideal" Foreground="#DD555555"/>
+                                                </StackPanel>
+                                            </Grid>
+                                        </RadioButton>
+
+                                        <RadioButton GroupName="BgType" Style="{StaticResource TabLikeOpacityAndBorderRadioButtonStyle}" IsChecked="{Binding IsBrushTabSelected,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}">
+                                            <Grid >
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="58"/>
+                                                    <ColumnDefinition Width="*"/>
+                                                    <ColumnDefinition Width="48"/>
+                                                </Grid.ColumnDefinitions>
+                                                <Grid>
+                                                    <Border Height="28" Width="28" CornerRadius="8" Background="#2B55C33D">
+                                                        <custom:PackIconMaterial Kind="Brush" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="#FF55C33D"/>
+                                                    </Border>
+                                                </Grid>
+                                                <StackPanel Grid.Column="1" Margin="8,4,0,4" VerticalAlignment="Center" >
+                                                    <TextBlock  FontSize="16"   Text="Brush" TextOptions.TextFormattingMode="Ideal" Foreground="#DD555555"/>
+                                                </StackPanel>
+                                            </Grid>
+
+                                        </RadioButton>
+
+                                        <RadioButton GroupName="BgType" Style="{StaticResource TabLikeOpacityAndBorderRadioButtonStyle}" IsChecked="{Binding IsSavedBgTabSelected,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}">
+                                            <Grid Opacity="0.6" >
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="58"/>
+                                                    <ColumnDefinition Width="*"/>
+                                                    <ColumnDefinition Width="48"/>
+                                                </Grid.ColumnDefinitions>
+                                                <Grid>
+                                                    <Border Height="28" Width="28" CornerRadius="8" Background="#2BD6711C">
+                                                        <custom:PackIconMaterial Kind="CheckboxMultipleBlank" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="#FFD6711C"/>
+                                                    </Border>
+                                                </Grid>
+                                                <StackPanel Grid.Column="1" Margin="8,4,0,4" VerticalAlignment="Center" >
+                                                    <TextBlock  FontSize="16"   Text="Saved" TextOptions.TextFormattingMode="Ideal" Foreground="#DD555555"/>
+                                                </StackPanel>
+                                            </Grid>
+
+                                        </RadioButton>
+
+                                         
+                                        
+                                          
+
+
+                                    </StackPanel>
+
+                                    <Grid x:Name="mage_sect" Visibility="{Binding IsImageTabSelected, Converter={StaticResource BooleanToVisibilityConverter}}" d:IsHidden="True">
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="auto"/>
+                                            <ColumnDefinition Width="*"/>
+                                        </Grid.ColumnDefinitions>
+
+                                        <Border Width="80" Height="80" Margin="8" Background="{StaticResource MiTransparencyTiles}">
+
+                                            <Image Source="Media/add_file_80px_office_l.png"/>
+
+                                        </Border>
+
+                                        <StackPanel Grid.Column="1" Margin="8">
+                                            <Grid>
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="*" />
+                                                    <ColumnDefinition Width="auto" />
+                                                </Grid.ColumnDefinitions>
+                                                <TextBox VerticalAlignment="Center"  materialDesign:TextFieldAssist.HasClearButton="True" materialDesign:HintAssist.IsFloating="False"  materialDesign:TextFieldAssist.TextFieldCornerRadius="0" Style="{DynamicResource MaterialDesignOutlinedTextBox}" Margin="8,0" Padding="4,4" Text="{Binding CurrentInputDestinationFolder, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                                                <Button VerticalAlignment="Center" HorizontalAlignment="Right" Height="24" Width="24" Grid.Column="1"  Style="{StaticResource MaterialDesignIconButton}"  Command="{Binding DataContext.DestinationFolderCommand, ElementName=window, Mode=OneWay}" ToolTip="Choose a folder" Margin="0 0 8 0" >
+                                                    <Image VerticalAlignment="Center" HorizontalAlignment="Center" Height="16" Width="16" Source="Media/folder_16px_ss.png" />
+                                                </Button>
+
+                                            </Grid>
+
+                                        </StackPanel>
+                                    </Grid>
+                                    <Grid x:Name="brush_sect" Visibility="{Binding IsBrushTabSelected, Converter={StaticResource BooleanToVisibilityConverter}}">
+
+
+                                        <StackPanel Width="200" HorizontalAlignment="Left" Margin="8">
+                                            <materialDesign:ColorPicker Color="{Binding ColorPickerValue,Mode=TwoWay}" Height="150" Width="200"/>
+                                            <Slider Margin="8"  Maximum="1" Minimum="0" Value="{Binding ToleranceSliderValue,Mode=TwoWay}"></Slider>
+                                        </StackPanel>
+
+
+                                    </Grid>
+                                    <Grid x:Name="saved_sect" Visibility="{Binding IsSavedBgTabSelected, Converter={StaticResource BooleanToVisibilityConverter}}">
+                                        <ItemsControl Background="White" Height="80">
+                                            
+                                        </ItemsControl>
+                                    </Grid>
+
+                                </StackPanel>
+                                <Grid  Grid.Column="1" x:Name="previewer" HorizontalAlignment="Right" Width="200" Height="200">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="auto"/>
+                                        <RowDefinition Height="*"/>
+                                    </Grid.RowDefinitions>
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock VerticalAlignment="Center" Text="Preview Size" Margin="0,0,8,0"/>
+                                        <TextBox VerticalAlignment="Center" Text="800"/>
+                                        <custom:PackIconMaterial VerticalAlignment="Center" Kind="Close" Width="10" Height="10" Margin="4,0"/>
+                                        <TextBox VerticalAlignment="Center" Text="800"/>
+                                    </StackPanel>
+                                    <Border Grid.Row="1" BorderBrush="#FFD30000"  Background="#FFE8E8E8" Margin="8" BorderThickness="1">
+                                        <Image Source="{Binding PreviewImageSource}" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                                    </Border>
+
+                                </Grid>
+
+                            </Grid>
+
                             <TextBlock Margin="8,8,8,6" Foreground="#FF979797" Text="Output Directory:" Style="{StaticResource MaterialDesignSubtitle2TextBlock}" />
 
 
 
-                            <Grid Background="#FF1A75B5">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*" />
-                                <ColumnDefinition Width="auto" />
-                            </Grid.ColumnDefinitions>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="auto" />
+                                </Grid.ColumnDefinitions>
                                 <TextBox VerticalAlignment="Center"  materialDesign:TextFieldAssist.HasClearButton="True" materialDesign:HintAssist.IsFloating="False"  materialDesign:TextFieldAssist.TextFieldCornerRadius="0" Style="{DynamicResource MaterialDesignOutlinedTextBox}" Margin="8,0" Padding="4,4" Text="{Binding CurrentInputDestinationFolder,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" />
                                 <Button VerticalAlignment="Center" HorizontalAlignment="Right" Height="24" Width="24" Grid.Column="1"  Style="{StaticResource MaterialDesignIconButton}"  Command="{Binding Path=DataContext.DestinationFolderCommand, ElementName=window,Mode=OneWay}" ToolTip="Choose a folder" Margin="0 0 8 0" >
-                                <Image VerticalAlignment="Center" HorizontalAlignment="Center" Height="16" Width="16" Source="Media/folder_16px_ss.png" />
-                            </Button>
+                                    <Image VerticalAlignment="Center" HorizontalAlignment="Center" Height="16" Width="16" Source="Media/folder_16px_ss.png" />
+                                </Button>
 
-                        </Grid>
+                            </Grid>
                             <CheckBox Visibility="Collapsed"  Margin="8,8,8,4" IsChecked="{Binding InputCreateSubDirectories}" Content="Create sub directories for each source"/>
 
 
@@ -504,7 +668,7 @@
                         </StackPanel>
                     </Grid>
                     <StackPanel HorizontalAlignment="Right" VerticalAlignment="Center" Margin="16 16" Grid.Row="1" Orientation="Horizontal">
-                        <Button Style="{StaticResource WisImportBut}" Command="{Binding StartScrapingCommand}"  Content="Start Download" />
+                        <Button Style="{StaticResource WisImportBut}" Command="{Binding StartProcessingCommand}"  Content="Apply Background" />
                     </StackPanel>
 
                 </Grid>
