--- a/BackgroundEasy/View/PresetView.xaml
+++ b/BackgroundEasy/View/PresetView.xaml
@@ -25,13 +25,29 @@
     <UserControl.Resources>
         <Converters1:BooleanToVisibilityInverted x:Key="BooleanToVisibilityInverted"/>
     </UserControl.Resources>
-    <materialDesign:ColorZone VerticalAlignment="Stretch" BorderBrush="#FFACACAC" BorderThickness="1" x:Name="Images_section" Grid.Column="0" Background="White" >
-        <Grid>
+    <materialDesign:ColorZone  VerticalAlignment="Stretch"  BorderThickness="1" x:Name="Images_section" Grid.Column="0"  MouseLeftButtonDown="Images_section_MouseLeftButtonDown" >
+        <materialDesign:ColorZone.Style>
+            <Style TargetType="materialDesign:ColorZone">
+                <Setter Property="BorderBrush" Value="#FFACACAC"></Setter>
+                <Setter Property="Mode" Value="Standard"></Setter>
+                <Style.Triggers>
+                    <DataTrigger Binding="{Binding IsSelected}" Value="true">
+                        <Setter Property="BorderBrush" Value="#FF1A75B5"></Setter>
+                        <Setter Property="Mode" Value="Custom"></Setter>
+                        <Setter Property="materialDesign:ColorZoneAssist.Background" Value="#FF1A75B5"></Setter>
+                        <Setter Property="materialDesign:ColorZoneAssist.Foreground" Value="White"></Setter>
+                    </DataTrigger>
+
+                </Style.Triggers>
+            </Style>
+        </materialDesign:ColorZone.Style>
+        <Grid >
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="48"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <Image Margin="4" Source="{Binding ThumbImageSource}" Width="30" Height="30"/>
+            <Border  Margin="4" Background="{StaticResource MiTransparencyTiles}" Width="{Binding ActualWidth, ElementName=image}" Height="{Binding ActualHeight, ElementName=image}"></Border>
+            <Image x:Name="image" Margin="4" Source="{Binding ThumbImageSource}" Width="30" Height="30"/>
             <TextBlock Margin="8" Grid.Column="1" VerticalAlignment="Center"  Text="{Binding  Name}" TextTrimming="CharacterEllipsis"/>
         </Grid>
     </materialDesign:ColorZone>
