--- a/BackgroundEasy/View/PresetView.xaml
+++ b/BackgroundEasy/View/PresetView.xaml
@@ -25,7 +25,7 @@
     <UserControl.Resources>
         <Converters1:BooleanToVisibilityInverted x:Key="BooleanToVisibilityInverted"/>
     </UserControl.Resources>
-    <materialDesign:ColorZone  VerticalAlignment="Stretch"  BorderThickness="1" x:Name="Images_section" Grid.Column="0"  MouseLeftButtonDown="Images_section_MouseLeftButtonDown" >
+    <materialDesign:ColorZone ToolTipService.Placement="Top" ToolTipService.PlacementTarget="{x:Reference Name=lbl}" ToolTip="{Binding Name}"  VerticalAlignment="Stretch"  BorderThickness="1" x:Name="Images_section" Grid.Column="0"  MouseLeftButtonDown="Images_section_MouseLeftButtonDown" >
         <materialDesign:ColorZone.Style>
             <Style TargetType="materialDesign:ColorZone">
                 <Setter Property="BorderBrush" Value="#FFACACAC"></Setter>
@@ -48,7 +48,7 @@
             </Grid.ColumnDefinitions>
             <Border  Margin="4" Background="{StaticResource MiTransparencyTiles}" Width="{Binding ActualWidth, ElementName=image}" Height="{Binding ActualHeight, ElementName=image}"></Border>
             <Image x:Name="image" Margin="4" Source="{Binding ThumbImageSource}" Width="30" Height="30"/>
-            <TextBlock Margin="8" Grid.Column="1" VerticalAlignment="Center"  Text="{Binding  Name}" TextTrimming="CharacterEllipsis"/>
+            <TextBlock x:Name="lbl" Margin="8" Grid.Column="1" VerticalAlignment="Center"  Text="{Binding  Name}" TextTrimming="CharacterEllipsis"/>
         </Grid>
     </materialDesign:ColorZone>
 
