--- a/BackgroundEasy/MainWindow.xaml
+++ b/BackgroundEasy/MainWindow.xaml
@@ -627,11 +627,13 @@
                                         <StackPanel Grid.Column="1" Margin="8">
                                             <Grid>
                                                 <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="auto" />
                                                     <ColumnDefinition Width="*" />
                                                     <ColumnDefinition Width="auto" />
                                                 </Grid.ColumnDefinitions>
-                                                <TextBox VerticalAlignment="Center"  materialDesign:TextFieldAssist.HasClearButton="True" materialDesign:HintAssist.IsFloating="False"  materialDesign:TextFieldAssist.TextFieldCornerRadius="0" Style="{DynamicResource MaterialDesignOutlinedTextBox}" Margin="8,0" Padding="4,4" Text="{Binding CuurentBackgroundImagePath, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                                                <Button VerticalAlignment="Center" HorizontalAlignment="Right" Height="24" Width="24" Grid.Column="1"  Style="{StaticResource MaterialDesignIconButton}"  Command="{Binding SelectBgImageCommand}" ToolTip="Choose an image" Margin="0 0 8 0" >
+                                                <TextBlock VerticalAlignment="Center" Margin="4 0" Text="Source"/>
+                                                <TextBox Grid.Column="1" VerticalAlignment="Center"  materialDesign:TextFieldAssist.HasClearButton="True" materialDesign:HintAssist.IsFloating="False"  materialDesign:TextFieldAssist.TextFieldCornerRadius="0" Style="{DynamicResource MaterialDesignOutlinedTextBox}" Margin="8,0" Padding="4,4" Text="{Binding CuurentBackgroundImagePath, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                                                <Button VerticalAlignment="Center" HorizontalAlignment="Right" Height="24" Width="24" Grid.Column="2"  Style="{StaticResource MaterialDesignIconButton}"  Command="{Binding SelectBgImageCommand}" ToolTip="Choose an image" Margin="0 0 8 0" >
                                                     <Image VerticalAlignment="Center" HorizontalAlignment="Center" Height="16" Width="16" Source="Media/folder_16px_ss.png" />
                                                 </Button>
 
@@ -641,12 +643,30 @@
                                     </Grid>
                                     <Grid x:Name="brush_sect" Visibility="{Binding IsBrushTabSelected, Converter={StaticResource BooleanToVisibilityConverter}}" MaxHeight="148" Height="148">
 
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="auto"/>
+                                            <ColumnDefinition Width="*"/>
+                                        </Grid.ColumnDefinitions>
 
                                         <StackPanel Width="200" HorizontalAlignment="Left" Margin="8,8,8,0" VerticalAlignment="Top">
                                             <materialDesign:ColorPicker Color="{Binding ColorPickerValue,Mode=TwoWay}" Height="118" Width="200"/>
                                             <Slider Margin="8,0"  Maximum="1" Minimum="0" Value="{Binding ToleranceSliderValue,Mode=TwoWay}"/>
                                         </StackPanel>
 
+                                        <StackPanel Grid.Column="1" Margin="8">
+                                            <Grid>
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="auto" />
+                                                    <ColumnDefinition Width="*" />
+                                                    <ColumnDefinition Width="auto" />
+                                                </Grid.ColumnDefinitions>
+                                                <TextBlock VerticalAlignment="Center" Margin="4 0" Text="Hex:"/>
+                                                <TextBox HorizontalAlignment="Left" Width="80" AttachedComMi:TextBoxAttachedProperties.EnterCommand="{Binding PushHexCommand}" Grid.Column="1" VerticalAlignment="Center"   materialDesign:HintAssist.IsFloating="False"  materialDesign:TextFieldAssist.TextFieldCornerRadius="0" Style="{DynamicResource MaterialDesignOutlinedTextBox}" Margin="8,0" Padding="4,4" Text="{Binding CurentBackgroundHexColor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                                               
+
+                                            </Grid>
+
+                                        </StackPanel>
 
                                     </Grid>
                                     <Grid x:Name="saved_sect" Visibility="{Binding IsSavedBgTabSelected, Converter={StaticResource BooleanToVisibilityConverter}}" MaxHeight="148" Height="148">
